--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -10,42 +10,30 @@
                     <div class="d-sm-flex justify-content-between my-4 pb-4 border-bottom">
                         <div class="media d-block d-sm-flex text-center text-sm-left">
                             <a class="cart-item-thumb mx-auto mr-sm-4" href="{% url 'listing' item.id %}">
-                                <img src="{{ item.image_url }}" style="width: 240px; height: 240px; object-fit: cover;">
+                                <img src="{{ item.image_url }}" alt="{{ item.title }}" style="width: 100%; max-width: 240px; height: auto; object-fit: cover;">
                             </a>
                             <div class="media-body pt-1">
-                                <h3 class="product-card-title font-weight-semibold"><a
-                                        href="{% url 'listing' item.id %}">{{ item.title }}</a></h3>
-                                <div class="font-size-sm mb-1"><span
-                                        class="text-muted mr-2">Description:</span>{{ item.description }}</div>
-                                <div class="font-size-sm mb-1"><span
-                                        class="text-muted mr-2">Author:</span>{{ item.user }}</div>
+                                <h3 class="product-card-title font-weight-semibold"><a href="{% url 'listing' item.id %}">{{ item.title }}</a></h3>
+                                <div class="font-size-sm mb-1"><span class="text-muted mr-2">Description:</span>{{ item.description }}</div>
+                                <div class="font-size-sm mb-1"><span class="text-muted mr-2">Author:</span>{{ item.user }}</div>
                                 {% if item.category %}
-                                    <div class="font-size-sm mb-1"><span
-                                            class="text-muted mr-2">Category:</span>{{ item.category | title }}</div>
+                                    <div class="font-size-sm mb-1"><span class="text-muted mr-2">Category:</span>{{ item.category | title }}</div>
                                 {% else %}
-                                    <div class="font-size-sm mb-1"><span class="text-muted mr-2">Category:</span> Not
-                                        listed.
-                                    </div>
+                                    <div class="font-size-sm mb-1"><span class="text-muted mr-2">Category:</span> Not listed.</div>
                                 {% endif %}
                                 {% if item.price %}
-                                    <div class="font-size-sm text-success mb-1"><span
-                                            class="text-muted mr-2">Price:</span>${{ item.price }}</div>
+                                    <div class="font-size-sm text-success mb-1"><span class="text-muted mr-2">Price:</span>${{ item.price }}</div>
                                 {% else %}
-                                    <div class="font-size-sm text-danger mb-1"><span
-                                            class="text-muted mr-2">Price:</span>Not specified</div>
+                                    <div class="font-size-sm text-danger mb-1"><span class="text-muted mr-2">Price:</span>Not specified</div>
                                 {% endif %}
                                 {% if item.winner == None %}
-                                    <div class="font-size-lg text-primary mb-1"><span class="text-muted mr-2">Eligibility Status:</span>Available
-                                    </div>
+                                    <div class="font-size-lg text-primary mb-1"><span class="text-muted mr-2">Eligibility Status:</span>Available</div>
                                 {% else %}
-                                    <div class="font-size-lg text-danger mb-1"><span class="text-muted mr-2">Eligibility Status:</span>Lot
-                                        Sold
-                                    </div>
+                                    <div class="font-size-lg text-danger mb-1"><span class="text-muted mr-2">Eligibility Status:</span>Lot Sold</div>
                                 {% endif %}
                                 <span class="text-muted">Created {{ item.created_at }} </span>
 
-                                <a class="text-danger" href="{% url 'unwatch' item.id %}"><i
-                                        class="fa fa-heart"></i></a>
+                                <a class="text-danger" href="{% url 'unwatch' item.id %}"><i class="fa fa-heart"></i></a>
                             </div>
                         </div>
                     </div>
