--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -93,14 +93,12 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-up m-0">
                         <a href="{% url 'default_home' %}" class="dropdown-item">Auctions</a>
-                        <a href="{% url 'forum' %}" class="dropdown-item">Forum</a>
-                        <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
                         <a href="{% url 'contact' %}" class="dropdown-item">Contact</a>
                     </div>
                 </div>
             </div>
         </div>
-        <a href="/auctions/login" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="/auctions/" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Visit Now<i class="fa fa-arrow-right ms-3"></i></a>
     </nav>
 
     <!-- Navbar End -->
@@ -133,7 +131,6 @@
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Auction //</h6>
                                     <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Find Your Dream Car in Sri Lanka</h1>
                                     <a href="/auctions/login" class="btn btn-primary py-3 px-5 animated slideInDown">Sign in<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
@@ -224,9 +221,9 @@
                             <div class="col-12 col-sm-6">
                                 <select class="form-select border-0" style="height: 55px;">
                                     <option selected>Select An Auction</option>
-                                    <option value="1">Auction 1</option>
-                                    <option value="2">Auction 2</option>
-                                    <option value="3">Auction 3</option>
+                                    <option value="1">Golden Auction</option>
+                                    <option value="2">Silver Auction</option>
+                                    <option value="3">Basic Auction</option>
                                 </select>
                             </div>
                             <div class="col-12 col-sm-6">
@@ -294,7 +291,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="{% static 'img/team-3.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'img/team-5.png' %}" alt="">
                         <div class="team-overlay position-absolute start-0 top-0 w-100 h-100">
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -302,8 +299,8 @@
                         </div>
                     </div>
                     <div class="bg-light text-center p-4">
-                        <h5 class="fw-bold mb-0">Sithum Hettiarachchi</h5>
-                        <small>Head of Marketing</small>
+                        <h5 class="fw-bold mb-0">Lakmini Bandarigodage</h5>
+                        <small>Lead Developer</small>
                     </div>
                 </div>
             </div>
@@ -318,7 +315,7 @@
                         </div>
                     </div>
                     <div class="bg-light text-center p-4">
-                        <h5 class="fw-bold mb-0">Tharindu Sadaruwan</h5>
+                        <h5 class="fw-bold mb-0">Tharindu Sandaruwan</h5>
                         <small>CFO</small>
                     </div>
                 </div>
@@ -422,8 +419,8 @@
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="border-bottom" href="#">Car Mart Lanka</a>, All Rights Reserved.
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                    <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                  
+                    <br><a class="border-bottom" href="https://themewagon.com" target="_blank"></a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
